# stm32-hal

./: Cargo.toml  README.md  README.tpl
src/: bitband.rs  flash.rs  gpio.rs  lib.rs
