[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = ["embedded", "no-std"]
keywords = ["no-std", "arm", "cortex-m", "stm32"]
description = "Bit-banding access for STM32 peripherals"
documentation = "https://docs.rs/stm32-band"
repository = "https://github.com/idubrov/stm32-bitband"
name = "stm32-bitband"
version = "0.1.0"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
vcell = "0.1.0"

[package.metadata.release]
pre-release-hook = "./update-readme.sh"
